--- a/template/src/style/theme/dark.less
+++ b/template/src/style/theme/dark.less
@@ -2,8 +2,8 @@
     // custom
     --theme-text-hover-color: #000;
     --theme-text-color: ghostwhite;
-    --theme-bg-color: #000;
-    --theme--before-bg-color: #f0f0f0;
+    --theme-bg-color: #f0f0f0;
+    --theme-before-bg-color: #000;
 
     // // Color
     // --primary-color: #2d8cf0;
