--- a/template/src/style/theme/light.less
+++ b/template/src/style/theme/light.less
@@ -2,8 +2,8 @@
     // custom
     --theme-text-hover-color: ghostwhite;
     --theme-text-color: #000;
-    --theme-bg-color: #f0f0f0;
-    --theme--before-bg-color: #000;
+    --theme-bg-color: #000;
+    --theme-before-bg-color: #f0f0f0;
 
 //     // Color
 //     --primary-color: #2d8cf0;
